--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -7,7 +9,7 @@
 body {
   background-color: #fff;
   color: #000;
-  font-family: Inter;
+  font-family: "Inter", sans-serif;
   font-size: 16px;
   display: flex;
   justify-content: center;
